--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@ button { padding:0.5rem 1rem; margin:0.5rem; cursor:pointer; }
 .caption { margin-top:5px; font-size:0.9rem; color:#8b4b00; }
 
 </style>
-<link rel="stylesheet" href="annaguillermo2010-wq/style.css">
-<script type="module" src="annaguillermo2010-wq/app.js"></script>
+<link rel="stylesheet" href="style.css">
+<script type="module" src="app.js"></script>
 
 </body>
 </html>
