--- a/index.html
+++ b/index.html
@@ -3,8 +3,50 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>📸 Album Compartido</title>
+  <title>📸 Álbum Compartido</title>
+
+  <!-- Estilo -->
   <link rel="stylesheet" href="style.css">
+
+  <style>
+    body { 
+      font-family: sans-serif; 
+      background:#fff7db; 
+      text-align:center; 
+      margin:0; 
+      padding:0; 
+    }
+    button { 
+      padding:0.5rem 1rem; 
+      margin:0.5rem; 
+      cursor:pointer; 
+      background-color: #ffcc80;
+      border: none;
+      border-radius: 8px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    }
+    #gallery { 
+      display:grid; 
+      grid-template-columns: repeat(auto-fit, minmax(140px,1fr)); 
+      gap:10px; 
+      margin:20px; 
+    }
+    .photo-card { 
+      border:1px solid #f0b86e; 
+      border-radius:12px; 
+      padding:5px; 
+      box-shadow:0 3px 6px rgba(231,125,0,0.12); 
+    }
+    .photo-card img { 
+      width:100%; 
+      border-radius:8px; 
+    }
+    .caption { 
+      margin-top:5px; 
+      font-size:0.9rem; 
+      color:#8b4b00; 
+    }
+  </style>
 </head>
 <body>
 
@@ -24,17 +66,8 @@
   </form>
 
   <div id="gallery"></div>
-<style>
-  body { font-family: sans-serif; background:#fff7db; text-align:center; margin:0; padding:0; }
-button { padding:0.5rem 1rem; margin:0.5rem; cursor:pointer; }
-#gallery { display:grid; grid-template-columns: repeat(auto-fit, minmax(140px,1fr)); gap:10px; margin:20px; }
-.photo-card { border:1px solid #f0b86e; border-radius:12px; padding:5px; box-shadow:0 3px 6px rgba(231,125,0,0.12); }
-.photo-card img { width:100%; border-radius:8px; }
-.caption { margin-top:5px; font-size:0.9rem; color:#8b4b00; }
 
-</style>
-<link rel="stylesheet" href="style.css">
-<script type="module" src="app.js"></script>
-
+  <!-- Tu script principal -->
+  <script type="module" src="app.js"></script>
 </body>
 </html>
